--- a/src/main/resources/assets/bingbingwahoo/lang/en_us.json
+++ b/src/main/resources/assets/bingbingwahoo/lang/en_us.json
@@ -16,8 +16,8 @@
   "text.autoconfig.bingbingwahoo.option.degreesPerFlipFrame.@Tooltip[2]": "moves per frame. Set to 0 to disable.",
   "text.autoconfig.bingbingwahoo.option.allowNormalWallJumps": "Allow wall jumping from normal jumps",
   "text.autoconfig.bingbingwahoo.option.allowNormalWallJumps.@Tooltip": "Enable wall jumping out of a normal jump.",
-  "text.autoconfig.bingbingwahoo.option.backFlips": "Allow back flipping",
-  "text.autoconfig.bingbingwahoo.option.backFlips.@Tooltip": "Enables back flipping.",
-  "text.autoconfig.bingbingwahoo.option.groundedDives": "Allow diving while grounded",
+  "text.autoconfig.bingbingwahoo.option.backFlips": "Backflips",
+  "text.autoconfig.bingbingwahoo.option.backFlips.@Tooltip": "Enables backflipping, triggered by jumping out of a crouch.",
+  "text.autoconfig.bingbingwahoo.option.groundedDives": "Grounded dives",
   "text.autoconfig.bingbingwahoo.option.groundedDives.@Tooltip": "Enable diving while on the ground."
 }
