--- a/src/main/resources/assets/bingbingwahoo/lang/en_us.json
+++ b/src/main/resources/assets/bingbingwahoo/lang/en_us.json
@@ -10,14 +10,19 @@
   "text.autoconfig.bingbingwahoo.option.maxLongJumpSpeed.@Tooltip": "Maximum velocity of a long jump.",
   "text.autoconfig.bingbingwahoo.option.longJumpSpeedMultiplier": "Long jump speed multiplier",
   "text.autoconfig.bingbingwahoo.option.longJumpSpeedMultiplier.@Tooltip": "Multiplier used for speed of long jumps.",
-  "text.autoconfig.bingbingwahoo.option.degreesPerFlipFrame": "Degrees per frame",
-  "text.autoconfig.bingbingwahoo.option.degreesPerFlipFrame.@Tooltip[0]": "Some moves make the player do a flip.",
-  "text.autoconfig.bingbingwahoo.option.degreesPerFlipFrame.@Tooltip[1]": "This is the number of degrees the camera",
-  "text.autoconfig.bingbingwahoo.option.degreesPerFlipFrame.@Tooltip[2]": "moves per frame. Set to 0 to disable.",
+  "text.autoconfig.bingbingwahoo.option.flipSpeedMultiplier": "Flip Speed Multiplier",
+  "text.autoconfig.bingbingwahoo.option.flipSpeedMultiplier.@Tooltip": "Multiplier for the speed of flips and backflips.",
   "text.autoconfig.bingbingwahoo.option.allowNormalWallJumps": "Allow wall jumping from normal jumps",
   "text.autoconfig.bingbingwahoo.option.allowNormalWallJumps.@Tooltip": "Enable wall jumping out of a normal jump.",
   "text.autoconfig.bingbingwahoo.option.backFlips": "Backflips",
   "text.autoconfig.bingbingwahoo.option.backFlips.@Tooltip": "Enables backflipping, triggered by jumping out of a crouch.",
   "text.autoconfig.bingbingwahoo.option.groundedDives": "Grounded dives",
-  "text.autoconfig.bingbingwahoo.option.groundedDives.@Tooltip": "Enable diving while on the ground."
+  "text.autoconfig.bingbingwahoo.option.groundedDives.@Tooltip": "Enable diving while on the ground.",
+  "text.autoconfig.bingbingwahoo.option.groundPoundType": "Ground Pound Type",
+  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[0]": "How Ground Pounds should behave.",
+  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[1]": "ENABLED - Normal behavior.",
+  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[2]": "DISABLED - Ground Pounds are disabled, and cannot be used.",
+  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[3]": "DESTRUCTIVE - The same as ENABLED, but the Ground Pound will cause destruction.",
+  "item.bingbingwahoo.mysterious_cap": "Mysterious Cap",
+  "bingbingwahoo.luigiNumberOne": "§a§oLuigi Number One!"
 }
