things - bunch of options for server-side control, gamerules and 1 extra command for ground pounds - some fixes

--- a/src/main/resources/assets/bingbingwahoo/lang/en_us.json
+++ b/src/main/resources/assets/bingbingwahoo/lang/en_us.json
@@ -1,17 +1,21 @@
 {
   "text.autoconfig.bingbingwahoo.title": "Bing Bing Wahoo Config",
-  "text.autoconfig.bingbingwahoo.option.bljType": "Backwards Long Jump mode",
-  "text.autoconfig.bingbingwahoo.option.bljType.@Tooltip[0]": "How the Backwards Long Jump should behave.",
-  "text.autoconfig.bingbingwahoo.option.bljType.@Tooltip[1]": "ENABLED - Normal behavior.",
-  "text.autoconfig.bingbingwahoo.option.bljType.@Tooltip[2]": "DISABLED - BLJ is disabled, cannot be used.",
-  "text.autoconfig.bingbingwahoo.option.bljType.@Tooltip[3]": "RAPID_FIRE - Allows for long jumps and BLJs",
-  "text.autoconfig.bingbingwahoo.option.bljType.@Tooltip[4]": "without releasing jump or crouch in between jumps.",
+  "text.autoconfig.bingbingwahoo.option.blj": "Backwards Long Jumps",
+  "text.autoconfig.bingbingwahoo.option.blj.@Tooltip[0]": "Whether backwards long jumps are enabled or not.",
+  "text.autoconfig.bingbingwahoo.option.blj.@Tooltip[1]": "Overridable by backwardsLongJumps gamerule.",
+  "text.autoconfig.bingbingwahoo.option.rapidFireLongJumps": "Rapid Fire Long Jumps",
+  "text.autoconfig.bingbingwahoo.option.rapidFireLongJumps.@Tooltip[0]": "Whether backwards long jumps can be used \"rapid fire\" or not.",
+  "text.autoconfig.bingbingwahoo.option.rapidFireLongJumps.@Tooltip[1]": "\"Rapid fire\" means that you can jump again without releasing jump in between.",
+  "text.autoconfig.bingbingwahoo.option.rapidFireLongJumps.@Tooltip[2]": "Overridable by rapidFireLongJumps gamerule.",
   "text.autoconfig.bingbingwahoo.option.maxLongJumpSpeed": "Max long jump speed",
-  "text.autoconfig.bingbingwahoo.option.maxLongJumpSpeed.@Tooltip": "Maximum velocity of a long jump.",
+  "text.autoconfig.bingbingwahoo.option.maxLongJumpSpeed.@Tooltip[0]": "Maximum velocity of a long jump.",
+  "text.autoconfig.bingbingwahoo.option.maxLongJumpSpeed.@Tooltip[1]": "Overridable by longJumpMaxSpeed gamerule.",
   "text.autoconfig.bingbingwahoo.option.longJumpSpeedMultiplier": "Long jump speed multiplier",
-  "text.autoconfig.bingbingwahoo.option.longJumpSpeedMultiplier.@Tooltip": "Multiplier used for speed of long jumps.",
+  "text.autoconfig.bingbingwahoo.option.longJumpSpeedMultiplier.@Tooltip[0]": "Multiplier used for speed of long jumps.",
+  "text.autoconfig.bingbingwahoo.option.longJumpSpeedMultiplier.@Tooltip[1]": "Overridable by longJumpSpeedMultiplier gamerule.",
   "text.autoconfig.bingbingwahoo.option.flipSpeedMultiplier": "Flip Speed Multiplier",
-  "text.autoconfig.bingbingwahoo.option.flipSpeedMultiplier.@Tooltip": "Multiplier for the speed of flips and backflips.",
+  "text.autoconfig.bingbingwahoo.option.flipSpeedMultiplier.@Tooltip[0]": "Multiplier for the speed of flips and backflips.",
+  "text.autoconfig.bingbingwahoo.option.flipSpeedMultiplier.@Tooltip[1]": "Set to 0 to disable.",
   "text.autoconfig.bingbingwahoo.option.allowNormalWallJumps": "Allow wall jumping from normal jumps",
   "text.autoconfig.bingbingwahoo.option.allowNormalWallJumps.@Tooltip": "Enable wall jumping out of a normal jump.",
   "text.autoconfig.bingbingwahoo.option.backFlips": "Backflips",
@@ -23,6 +27,9 @@
   "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[1]": "ENABLED - Normal behavior.",
   "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[2]": "DISABLED - Ground Pounds are disabled, and cannot be used.",
   "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[3]": "DESTRUCTIVE - The same as ENABLED, but the Ground Pound will cause destruction.",
+  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[4]": "Can be overridden by destructiveGroundPounds gamerule.",
+  "text.autoconfig.bingbingwahoo.option.bonking": "Bonking",
+  "text.autoconfig.bingbingwahoo.option.bonking.@Tooltip": "Whether bonks should happen or not.",
   "item.bingbingwahoo.mysterious_cap": "Mysterious Cap",
   "bingbingwahoo.luigiNumberOne": "§a§oLuigi Number One!"
 }
