now it's actually perfect

--- a/src/main/resources/assets/bingbingwahoo/lang/en_us.json
+++ b/src/main/resources/assets/bingbingwahoo/lang/en_us.json
@@ -37,7 +37,7 @@
   "item.bingbingwahoo.music_disc_slider": "Music Disc",
   "item.bingbingwahoo.music_disc_slider.desc": "Koji Kondo - Slider",
   "item.bingbingwahoo.music_disc_slider.desc2": "...but in the Minecraft soundfont",
-  "bingbingwahoo.luigiNumberOne": "Luigi Number One!",
+  "bingbingwahoo.luigi_number_one": "Luigi Number One!",
   "argument.entity.options.sliding.description": "Players sliding",
   "gamerule.backwardsLongJumps": "Backwards Long Jumps",
   "gamerule.destructiveGroundPounds": "Destructive Ground Pounds",
