move to midnight config

--- a/src/main/resources/assets/bingbingwahoo/lang/en_us.json
+++ b/src/main/resources/assets/bingbingwahoo/lang/en_us.json
@@ -1,35 +1,59 @@
 {
-  "text.autoconfig.bingbingwahoo.title": "Bing Bing Wahoo Config",
-  "text.autoconfig.bingbingwahoo.option.blj": "Backwards Long Jumps",
-  "text.autoconfig.bingbingwahoo.option.blj.@Tooltip[0]": "Whether backwards long jumps are enabled or not.",
-  "text.autoconfig.bingbingwahoo.option.blj.@Tooltip[1]": "Overridable by backwardsLongJumps gamerule.",
-  "text.autoconfig.bingbingwahoo.option.rapidFireLongJumps": "Rapid Fire Long Jumps",
-  "text.autoconfig.bingbingwahoo.option.rapidFireLongJumps.@Tooltip[0]": "Whether backwards long jumps can be used \"rapid fire\" or not.",
-  "text.autoconfig.bingbingwahoo.option.rapidFireLongJumps.@Tooltip[1]": "\"Rapid fire\" means that you can jump again without releasing jump in between.",
-  "text.autoconfig.bingbingwahoo.option.rapidFireLongJumps.@Tooltip[2]": "Overridable by rapidFireLongJumps gamerule.",
-  "text.autoconfig.bingbingwahoo.option.maxLongJumpSpeed": "Max long jump speed",
-  "text.autoconfig.bingbingwahoo.option.maxLongJumpSpeed.@Tooltip[0]": "Maximum velocity of a long jump.",
-  "text.autoconfig.bingbingwahoo.option.maxLongJumpSpeed.@Tooltip[1]": "Overridable by longJumpMaxSpeed gamerule.",
-  "text.autoconfig.bingbingwahoo.option.longJumpSpeedMultiplier": "Long jump speed multiplier",
-  "text.autoconfig.bingbingwahoo.option.longJumpSpeedMultiplier.@Tooltip[0]": "Multiplier used for speed of long jumps.",
-  "text.autoconfig.bingbingwahoo.option.longJumpSpeedMultiplier.@Tooltip[1]": "Overridable by longJumpSpeedMultiplier gamerule.",
-  "text.autoconfig.bingbingwahoo.option.flipSpeedMultiplier": "Flip Speed Multiplier",
-  "text.autoconfig.bingbingwahoo.option.flipSpeedMultiplier.@Tooltip[0]": "Multiplier for the speed of flips and backflips.",
-  "text.autoconfig.bingbingwahoo.option.flipSpeedMultiplier.@Tooltip[1]": "Set to 0 to disable.",
-  "text.autoconfig.bingbingwahoo.option.allowNormalWallJumps": "Allow wall jumping from normal jumps",
-  "text.autoconfig.bingbingwahoo.option.allowNormalWallJumps.@Tooltip": "Enable wall jumping out of a normal jump.",
-  "text.autoconfig.bingbingwahoo.option.backFlips": "Backflips",
-  "text.autoconfig.bingbingwahoo.option.backFlips.@Tooltip": "Enables backflipping, triggered by jumping out of a crouch.",
-  "text.autoconfig.bingbingwahoo.option.groundedDives": "Grounded dives",
-  "text.autoconfig.bingbingwahoo.option.groundedDives.@Tooltip": "Enable diving while on the ground.",
-  "text.autoconfig.bingbingwahoo.option.groundPoundType": "Ground Pound Type",
-  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[0]": "How Ground Pounds should behave.",
-  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[1]": "ENABLED - Normal behavior.",
-  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[2]": "DISABLED - Ground Pounds are disabled, and cannot be used.",
-  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[3]": "DESTRUCTIVE - The same as ENABLED, but the Ground Pound will cause destruction.",
-  "text.autoconfig.bingbingwahoo.option.groundPoundType.@Tooltip[4]": "Can be overridden by destructiveGroundPounds gamerule.",
-  "text.autoconfig.bingbingwahoo.option.bonking": "Bonking",
-  "text.autoconfig.bingbingwahoo.option.bonking.@Tooltip": "Whether bonks should happen or not.",
+  "bingbingwahoo.midnightconfig.title": "Bing Bing Wahoo Config",
+
+  "bingbingwahoo.midnightconfig.blj": "Backwards Long Jumps",
+  "bingbingwahoo.midnightconfig.bljComment0": "Whether backwards long jumps are enabled or not.",
+  "bingbingwahoo.midnightconfig.bljComment1": "Overridable by backwardsLongJumps gamerule.",
+
+  "bingbingwahoo.midnightconfig.rapidFireLongJumps": "Rapid Fire Long Jumps",
+  "bingbingwahoo.midnightconfig.rapidFireLongJumpsComment0": "Whether backwards long jumps can be used \"rapid fire\" or not.",
+  "bingbingwahoo.midnightconfig.rapidFireLongJumpsComment1": "\"Rapid fire\" means that you can jump again without releasing jump in between.",
+  "bingbingwahoo.midnightconfig.rapidFireLongJumpsComment2": "Overridable by rapidFireLongJumps gamerule.",
+
+  "bingbingwahoo.midnightconfig.maxLongJumpSpeed": "Max long jump speed",
+  "bingbingwahoo.midnightconfig.maxLongJumpSpeedComment0": "Maximum velocity of a long jump.",
+  "bingbingwahoo.midnightconfig.maxLongJumpSpeedComment1": "Overridable by longJumpMaxSpeed gamerule.",
+
+  "bingbingwahoo.midnightconfig.longJumpSpeedMultiplier": "Long jump speed multiplier",
+  "bingbingwahoo.midnightconfig.longJumpSpeedMultiplierComment0": "Multiplier used for speed of long jumps.",
+  "bingbingwahoo.midnightconfig.longJumpSpeedMultiplierComment1": "Overridable by longJumpSpeedMultiplier gamerule.",
+
+  "bingbingwahoo.midnightconfig.flipSpeedMultiplier": "Flip Speed Multiplier",
+  "bingbingwahoo.midnightconfig.flipSpeedMultiplierComment0": "Multiplier for the speed of flips and backflips.",
+  "bingbingwahoo.midnightconfig.flipSpeedMultiplierComment1": "Set to 0 to disable.",
+
+  "bingbingwahoo.midnightconfig.allowNormalWallJumps": "Allow wall jumping from normal jumps",
+  "bingbingwahoo.midnightconfig.allowNormalWallJumpsComment": "Enable wall jumping out of a normal jump.",
+
+  "bingbingwahoo.midnightconfig.backFlips": "Backflips",
+  "bingbingwahoo.midnightconfig.backFlipsComment": "Enables backflipping, triggered by jumping out of a crouch.",
+
+  "bingbingwahoo.midnightconfig.groundedDives": "Grounded dives",
+  "bingbingwahoo.midnightconfig.groundedDivesComment": "Enable diving while on the ground.",
+
+  "bingbingwahoo.midnightconfig.groundPoundType": "Ground Pound Type",
+  "bingbingwahoo.midnightconfig.groundPoundTypeComment0": "How Ground Pounds should behave.",
+  "bingbingwahoo.midnightconfig.groundPoundTypeComment1": "Enabled - Normal behavior.",
+  "bingbingwahoo.midnightconfig.groundPoundTypeComment2": "Disabled - Ground Pounds are disabled, and cannot be used.",
+  "bingbingwahoo.midnightconfig.groundPoundTypeComment3": "Destructive - The same as Enabled, but the Ground Pound will cause destruction.",
+  "bingbingwahoo.midnightconfig.groundPoundTypeComment4": "Can be overridden by destructiveGroundPounds gamerule.",
+
+  "bingbingwahoo.midnightconfig.enum.GroundPoundTypes.ENABLED": "Enabled",
+  "bingbingwahoo.midnightconfig.enum.GroundPoundTypes.DISABLED": "Disabled",
+  "bingbingwahoo.midnightconfig.enum.GroundPoundTypes.DESTRUCTIVE": "Destructive",
+
+  "bingbingwahoo.midnightconfig.bonking": "Bonking",
+  "bingbingwahoo.midnightconfig.bonkingComment": "Whether bonks should happen or not.",
+
+  "bingbingwahoo.midnightconfig.spacer0": "",
+  "bingbingwahoo.midnightconfig.spacer1": "",
+  "bingbingwahoo.midnightconfig.spacer2": "",
+  "bingbingwahoo.midnightconfig.spacer3": "",
+  "bingbingwahoo.midnightconfig.spacer4": "",
+  "bingbingwahoo.midnightconfig.spacer5": "",
+  "bingbingwahoo.midnightconfig.spacer6": "",
+  "bingbingwahoo.midnightconfig.spacer7": "",
+  "bingbingwahoo.midnightconfig.spacer8": "",
 
   "item.bingbingwahoo.mysterious_cap": "Mysterious Cap",
   "bingbingwahoo.key.throw_cap": "Throw Cap",
