sliding changes - new tags for behavior - compat with Conventional Cubes and Templates 2 - fix player height when sliding

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,4 +4,6 @@ On publish, it should be cleared to prepare for the next release cycle.
 
 Change logging starts below:
 ----------
-- updated to 1.20
+- new tags for slope behavior
+- added compat with Conventional Cubes and Templates 2
+- fix player height when sliding
