--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,4 +4,4 @@ On publish, it should be cleared to prepare for the next release cycle.
 
 Change logging starts below:
 ----------
-- Allow boots to have NBT that allows ground-pounding blocks only in a specific area
+- Make boot destruction area work properly
