--- a/src/main/resources/assets/bingbingwahoo/lang/en_us.json
+++ b/src/main/resources/assets/bingbingwahoo/lang/en_us.json
@@ -1,76 +1,3 @@
 {
-  "bingbingwahoo.midnightconfig.title": "Bing Bing Wahoo Config",
-
-  "bingbingwahoo.midnightconfig.blj": "Backwards Long Jumps",
-  "bingbingwahoo.midnightconfig.bljComment0": "Whether backwards long jumps are enabled or not.",
-  "bingbingwahoo.midnightconfig.bljComment1": "Overridable by backwardsLongJumps gamerule.",
-
-  "bingbingwahoo.midnightconfig.rapidFireLongJumps": "Rapid Fire Long Jumps",
-  "bingbingwahoo.midnightconfig.rapidFireLongJumpsComment0": "Whether backwards long jumps can be used \"rapid fire\" or not.",
-  "bingbingwahoo.midnightconfig.rapidFireLongJumpsComment1": "\"Rapid fire\" means that you can jump again without releasing jump in between.",
-  "bingbingwahoo.midnightconfig.rapidFireLongJumpsComment2": "Overridable by rapidFireLongJumps gamerule.",
-
-  "bingbingwahoo.midnightconfig.maxLongJumpSpeed": "Max long jump speed",
-  "bingbingwahoo.midnightconfig.maxLongJumpSpeedComment0": "Maximum velocity of a long jump.",
-  "bingbingwahoo.midnightconfig.maxLongJumpSpeedComment1": "Overridable by longJumpMaxSpeed gamerule.",
-
-  "bingbingwahoo.midnightconfig.longJumpSpeedMultiplier": "Long jump speed multiplier",
-  "bingbingwahoo.midnightconfig.longJumpSpeedMultiplierComment0": "Multiplier used for speed of long jumps.",
-  "bingbingwahoo.midnightconfig.longJumpSpeedMultiplierComment1": "Overridable by longJumpSpeedMultiplier gamerule.",
-
-  "bingbingwahoo.midnightconfig.flipSpeedMultiplier": "Flip Speed Multiplier",
-  "bingbingwahoo.midnightconfig.flipSpeedMultiplierComment0": "Multiplier for the speed of flips and backflips.",
-  "bingbingwahoo.midnightconfig.flipSpeedMultiplierComment1": "Set to 0 to disable.",
-
-  "bingbingwahoo.midnightconfig.allowNormalWallJumps": "Allow wall jumping from normal jumps",
-  "bingbingwahoo.midnightconfig.allowNormalWallJumpsComment": "Enable wall jumping out of a normal jump.",
-
-  "bingbingwahoo.midnightconfig.backFlips": "Backflips",
-  "bingbingwahoo.midnightconfig.backFlipsComment": "Enables backflipping, triggered by jumping out of a crouch.",
-
-  "bingbingwahoo.midnightconfig.groundedDives": "Grounded dives",
-  "bingbingwahoo.midnightconfig.groundedDivesComment": "Enable diving while on the ground.",
-
-  "bingbingwahoo.midnightconfig.groundPoundType": "Ground Pound Type",
-  "bingbingwahoo.midnightconfig.groundPoundTypeComment0": "How Ground Pounds should behave.",
-  "bingbingwahoo.midnightconfig.groundPoundTypeComment1": "Enabled - Normal behavior.",
-  "bingbingwahoo.midnightconfig.groundPoundTypeComment2": "Disabled - Ground Pounds are disabled, and cannot be used.",
-  "bingbingwahoo.midnightconfig.groundPoundTypeComment3": "Destructive - The same as Enabled, but the Ground Pound will cause destruction.",
-  "bingbingwahoo.midnightconfig.groundPoundTypeComment4": "Can be overridden by destructiveGroundPounds gamerule.",
-
-  "bingbingwahoo.midnightconfig.enum.GroundPoundType.ENABLED": "Enabled",
-  "bingbingwahoo.midnightconfig.enum.GroundPoundType.DISABLED": "Disabled",
-  "bingbingwahoo.midnightconfig.enum.GroundPoundType.DESTRUCTIVE": "Destructive",
-
-  "bingbingwahoo.midnightconfig.bonking": "Bonking",
-  "bingbingwahoo.midnightconfig.bonkingComment": "Whether bonks should happen or not.",
-
-  "bingbingwahoo.midnightconfig.spacer0": "",
-  "bingbingwahoo.midnightconfig.spacer1": "",
-  "bingbingwahoo.midnightconfig.spacer2": "",
-  "bingbingwahoo.midnightconfig.spacer3": "",
-  "bingbingwahoo.midnightconfig.spacer4": "",
-  "bingbingwahoo.midnightconfig.spacer5": "",
-  "bingbingwahoo.midnightconfig.spacer6": "",
-  "bingbingwahoo.midnightconfig.spacer7": "",
-  "bingbingwahoo.midnightconfig.spacer8": "",
-
-  "item.bingbingwahoo.mysterious_cap": "Mysterious Cap",
-  "bingbingwahoo.key.throw_cap": "Throw Cap",
-  "bingbingwahoo.key.category": "Bing Bing Wahoo",
-
-  "item.bingbingwahoo.music_disc_slider": "Music Disc",
-  "item.bingbingwahoo.music_disc_slider.desc": "Koji Kondo - Slider",
-  "item.bingbingwahoo.music_disc_slider.desc2": "...but in the Minecraft soundfont",
-
-  "bingbingwahoo.luigi_number_one": "Luigi Number One!",
-
-  "argument.entity.options.sliding.description": "Players sliding",
-
-  "gamerule.backwardsLongJumps": "Backwards Long Jumps",
-  "gamerule.destructiveGroundPounds": "Destructive Ground Pounds",
-  "gamerule.rapidFireLongJumps": "Rapid Fire Long Jumps",
-  "gamerule.longJumpMaxSpeed": "Max long jump speed",
-  "gamerule.longJumpSpeedMultiplier": "Long jump speed multiplier",
-  "gamerule.mysteriousCapRequired": "Mysterious Cap Required"
+  "item.bingbingwahoo.mysterious_cap": "Mysterious Cap"
 }
